# liwca

./: .gitignore  AGENTS.md  MANIFEST.in  MILESTONES.md  README.md  README.rst  TODO.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: gh-pr-review.md  gh.md  liwc22-cli.md  pandera.md  pooch.md  sphinx-docs.md  sphinx.md
.claude/hooks/: lint-on-stop.sh
.claude/skills/add-dictionary/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: docs.yaml  release.yaml  tests.yaml  tests.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  dictionaries.rst  guide.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  tutorial.rst
docs/_ext/: dictcatalogue.py
docs/_templates/autosummary/: class.rst
docs/api/: core.rst  count.rst  index.rst  io.rst  liwc22.rst
docs/api/datasets/: corpora.rst  dictionaries.rst  index.rst  tables.rst
docs/examples/: index.rst  sherlock.rst
docs/guide/: datasets.rst  ddr.rst  index.rst  intro.rst  liwc22.rst
src/liwca/: __init__.py  _catalogue.py  _remoteprocessors.py  count.py  ddr.py  fetchers.py  io.py  liwc22.py
src/liwca/data/: registry.json  registry.txt
src/liwca/datasets/: __init__.py  _common.py  corpora.py  dictionaries.py  tables.py
src/liwca/datasets/corpora/: __init__.py  registry.txt
src/liwca/datasets/data/: registry.txt
src/liwca/datasets/dictionaries/: __init__.py  registry.txt
src/liwca/datasets/tables/: __init__.py  registry.txt
tests/: conftest.py  test_common.py  test_corpora.py  test_count.py  test_ddr.py  test_dictionaries.py  test_fetchers.py  test_io.py  test_liwc22.py  test_remote.py  test_tables.py
tests/data/: toy.dic  toy.dicx  toy_weighted.dicx  toybad.dicx
