[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liwca"
dynamic = ["version"]
description = "Linguistic Inquiry Word Count Assistant"
authors = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
maintainers = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.25",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pandera>=0.27",
  "pooch>=1.8",
  "scikit-learn>=1.3",
]
readme = "README.md"
keywords = ["LIWC", "text", "language", "datasets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/remrama/liwca"
Documentation = "https://remrama.github.io/liwca"

[project.optional-dependencies]
ddr = ["gensim>=4.0"]
dev = [
  "mypy>=1.12",
  "pre-commit>=3.0",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.6",
  "sphinx>=7.0",
  "sphinx-book-theme>=1.1",
]

[tool.setuptools.dynamic]
version = {attr = "liwca.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
liwca = ["datasets/data/registry.txt"]

[tool.mypy]
files = ["src/"]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=liwca --cov-report=term-missing --doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "NPY201"]  # ["E4", "E7", "E9"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Ignore star and unused import violations for __init__.py file

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
line-ending = "lf"
quote-style = "double"
